# personal-finances-python-api

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  prospector.yaml  pyproject.toml  requirements.txt
.github/workflows/: continous_integration.yml
src/: domain.py  main.py
tests/: #test_main.py#  conftest.py  domain_data.py  test_domain.py  test_main.py
