[tool.poetry]
name = "finances"
version = "0.1.0"
description = "Finances API"
authors = ["Jonatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "*"
fastapi = "*"
httpx = "*"
loguru = "*"
uvicorn = "*"
gunicorn = "*"
requests = "*"
pydantic = "*"
email-validator = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
prospector = "*"
blue = "*"
isort = "*"
safety = "*"
pytest = "*"
pytest-sugar = "*"
pytest-coverage = "*"
pytest-watch = "*"
pytest-mock = "*"
pytest-asyncio = "*"
coverage = "*"
pytest-cov = "*"

[tool.poetry.group.dev.dependencies]
pylama = {extras = ["all"], version = "^8.4.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
