[tool.poetry]
name = "finances"
version = "0.1.0"
description = "Finances API"
authors = ["Jonatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "*"
fastapi = "*"
httpx = "*"
loguru = "*"
uvicorn = "*"
gunicorn = "*"
requests = "*"
pydantic = "*"
email-validator = "*"

[tool.poetry.dev-dependencies]
ipdb = "*"
blue = "0.9.1"
isort = "*"
safety = "*"
pytest = "*"
pytest-sugar = "*"
pytest-coverage = "*"
pytest-watch = "*"
pytest-mock = "*"
pytest-asyncio = "*"
coverage = "*"
pytest-cov = "*"
flake8 = "*"
prospector = {extras = ["with-everything"], version = "^1.7.7"}

[tool.poetry.group.dev.dependencies]
radon = "^5.1.0"
eradicate = "^2.1.0"

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic", "rapidjson"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
