[tool.poetry]
name = "finances"
version = "0.1.0"
description = "Finances API"
authors = ["Jonatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "*"
fastapi = "*"
httpx = "*"
loguru = "*"
uvicorn = "*"
gunicorn = "*"
requests = "*"
pydantic = "*"
email-validator = "*"

[tool.poetry.group.dev.dependencies]
radon = "*"
eradicate = "*"
ipdb = "*"
blue = "0.9.1"
isort = "*"
safety = "*"
pytest = "*"
pytest-sugar = "*"
pytest-coverage = "*"
pytest-watcher = "*"
pytest-mock = "*"
pytest-asyncio = "*"
coverage = "*"
pytest-cov = "*"
ruff = "*"
pylint = "^2.15.7"
vulture = "^2.6"

[tool.ruff]
select = ["E", "F", "W", "I", "D", "U", "N", "ERA", "S", "C", "FBT", "B", "A", "T", "I25", "T", "ANN", "YTT", "BLE", "C90", "RUF", "M"]
src = ["src", "tests"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.flake8-annotations]
mypy-init-return = true

[tool.ruff.isort]
known-first-party = ["src"]
known-third-party = ["fastapi"]

[tool.pylint.main]
ignore = [ "pyproject.toml", "conftest.py" ]

[tool.pylint.master]
extension-pkg-allow-list = ["pydantic", "rapidjson"]

[tool.pylint.refactoring]
# Maximum number of nested blocks for function / method body
max-nested-blocks = 5

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
junit_family= "xunit1"
markers = [
  "smoke: main tests to validate system",
  "integrate: integrate tests",
]

[tool.coverage.run]
omit = [
    "backend/tests/*"
]
[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
